--- a/public/Administrador/AdminDescargaFacturasGeneral/DescargarFacturas.html
+++ b/public/Administrador/AdminDescargaFacturasGeneral/DescargarFacturas.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Descargar Facturas - Automatix Solutions</title>
-  <link rel="stylesheet" href="DescargarFacturas.css"/>
+  <link rel="stylesheet" href="/public/Administrador/AdminDescargaFacturasGeneral/DescargarFacturas.css" />
 </head>
+
 <body class="dark-theme">
   <!-- Header -->
   <header class="header">
@@ -15,7 +17,7 @@
         <!-- Botón Regresar -->
         <button id="backBtn" class="back-btn" title="Volver">
           <svg viewBox="0 0 24 24" class="back-icon" fill="none" stroke="currentColor" stroke-width="2">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M15 19l-7-7 7-7"/>
+            <path stroke-linecap="round" stroke-linejoin="round" d="M15 19l-7-7 7-7" />
           </svg>
         </button>
 
@@ -23,9 +25,8 @@
           <div class="brand-icon">
             <svg class="brand-svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                d="M9 17a2 2 0 11-4 0 2 2 0 014 0zM21 12a9 9 0 11-18 0 9 9 0 0118 0z"/>
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                d="m9 12l2 2 4-4"/>
+                d="M9 17a2 2 0 11-4 0 2 2 0 014 0zM21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m9 12l2 2 4-4" />
             </svg>
           </div>
           <div>
@@ -38,13 +39,12 @@
           <button id="themeToggle" class="theme-toggle" title="Cambiar tema">
             <svg id="moonIcon" class="theme-icon" fill="none" viewBox="0 0 24 24" stroke="currentColor">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"/>
+                d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z" />
             </svg>
             <svg id="sunIcon" class="theme-icon hidden" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707
                    M6.343 6.343l-.707-.707m12.728 0l-.707.707
-                   M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z"/>
+                   M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z" />
             </svg>
           </button>
         </div>
@@ -159,6 +159,7 @@
     </div>
   </main>
 
-  <script src="DescargarFacturas.js"></script>
+  <script src="/public/Administrador/AdminDescargaFacturasGeneral/DescargarFacturas.js"></script>
 </body>
+
 </html>
